--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "dirt"  #"default" # "air", "aqua", "contrast", "dark
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "코드노트"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "정리하려고 만든 블로그" # site tagline that appears below site title in masthead
 name                     : "Yoonsu"
 description              : "An amazing website."
 url                      : "https://yoon-su.github.io"
